[COM_COURSES] Fix overlap issues with buttons at the end of playback

--- a/components/com_courses/assets/css/hubpresenter.css
+++ b/components/com_courses/assets/css/hubpresenter.css
@@ -28,6 +28,10 @@
 	background: #333;
 	color: #999;
 }*/
+#replay-back, 
+#replay-now {
+	bottom: 175px;
+}
 
 /* Hide the sidebar if the page is too narrow */
 @media only screen and (max-width: 1160px) {
@@ -50,6 +54,10 @@
 	#presenter-right video {
 		min-height: 200px;
 	}
+	#replay-back, 
+	#replay-now {
+		bottom: 120px;
+	}
 }
 @media only screen and (max-width: 860px) {
 	#presenter-container {
@@ -68,5 +76,19 @@
 	}
 	#resume-video {
 		right: 18%;
+	}
+	#replay #replay-details {
+		width: 75%;
+		left: 12.5%;
+	}
+	#replay-back {
+		left: 12.5%;
+	}
+	#replay-now {
+		right: 12.5%;
+	}
+	#replay-back, 
+	#replay-now {
+		bottom: 330px;
 	}
 }
